--- a/resources/views/auth/login.ejs
+++ b/resources/views/auth/login.ejs
@@ -1,3 +1,26 @@
-<section class="login">
+<section class="login flex justify-center pt-24">
+    <div class="w-full max-w-xs">
+        <form action="" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+            <div class="mb-4">
+                <label for="username" class="block text-gray-700 text-sm font-bold mb-2">Email</label>
+                <input type="email" class="shadow appearance-none border rounded w-full py-2 px-3"
+                    placeholder="Enter your email">
+            </div>
+            <div class="mb-6">
+                <label for="username" class="block text-gray-700 text-sm font-bold mb-2">Password</label>
+                <input type="text" class="shadow appearance-none border rounded w-full py-2 px-3">
 
+            </div>
+            <div class="flex items-center justify-between">
+                <button
+                    class="btn-primary rounded-full text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                    type="button">
+                    Login
+                </button>
+                <a href="/register" class="inline-block align-baseline font-bold text-sm">Don't
+                    have account?</a>
+            </div>
+        </form>
+        <p class="text-center text-gray-500 text-xs">&copy;2020 Sharma Jay All rights reserved</p>
+    </div>
 </section>
