--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,4 +1,6 @@
 @import './variable';
+@import '~noty/src/noty.scss';
+@import '~noty/src/themes/mint.scss';
 
 body {
     font-family: 'Lato', sans-serif;
@@ -52,6 +54,9 @@ section.hero {
         color: $pure;
         transition: $smooth;
     }
+    &:focus{
+        outline:none;
+    }
 }
 
 .btn-primary {
@@ -82,4 +87,8 @@ section.login {
             color: $primary-hover;
         }
     }
+}
+.noty_theme_mint{
+    border-radius: 50px!important;
+    padding-left:8px!important;
 }
