--- a/resources/views/customers/cart.ejs
+++ b/resources/views/customers/cart.ejs
@@ -5,48 +5,36 @@
             <img src="/img/cart.png" alt="" class="cart-size">
             <h1 class="font-bold ml-4 text-2xl">Order Summary</h1>
         </div>
+        <!--In the below code we have used Object.values which converts the items object into array
+        -->
+        <% if(session.cart){%>
         <div class="pizza-list">
+            <% for(let pizza of Object.values(session.cart.items)){%>
+        
             <div class="flex items-center my-8">
-                <img class="w-24" src="/img/logo.png" alt="">
+                <img class="w-24" src="/img/<%=pizza.item.image%>" alt="">
                 <div class="ml-4 flex-1">
-                    <h1>Marinara</h1>
-                    <span>MEDIUM</span>
+                    <h1><%=pizza.item.name%></h1>
+                    <span><%=pizza.item.size%></span>
                 </div>
-                <span class="flex-1">1Pcs</span>
-                <span class="font-bold text-lg">₹300</span>
+                <span class="flex-1"><%=pizza.qty%>Pcs</span>
+                <span class="font-bold text-lg"><%=pizza.qty * pizza.item.price%></span>
             </div>
-            <div class="flex items-center my-8">
-                <img class="w-24" src="/img/logo.png" alt="">
-                <div class="ml-4 flex-1">
-                    <h1>Marinara</h1>
-                    <span>MEDIUM</span>
-                </div>
-                <span class="flex-1">1Pcs</span>
-                <span class="font-bold text-lg">₹300</span>
-            </div>
-            <div class="flex items-center my-8">
-                <img class="w-24" src="/img/logo.png" alt="">
-                <div class="ml-4 flex-1">
-                    <h1>Marinara</h1>
-                    <span>MEDIUM</span>
-                </div>
-                <span class="flex-1">1Pcs</span>
-                <span class="font-bold text-lg">₹300</span>
-            </div>
+            <%}%>
         </div>
         <hr>
         <div class="text-right py-4">
             <div>
                 <span class="text-lg font-bold">Total Amount: </span>
-                <span class="amount text-2xl font-bold ml-2">₹300</span>
+                <span class="amount text-2xl font-bold ml-2">₹<%=session.cart.totalPrice%></span>
             </div>
             <div>
                 <form action="" class="mt-12">
                     <input type="text" class="border-gray-400 p-2 w-1/2 mb-4" placeholder="Phone number">
                     <input type="text" class="border-gray-400 p-2 w-1/2" placeholder="Address">
                     <div>
-                        <!-- <button type="submit" class="btn-primary px-6 py-2 rounded-full text-white font-bold mt-6">Order
-                            Now</button> -->
+                        <button type="submit" class="btn-primary px-6 py-2 rounded-full text-white font-bold mt-6">Order
+                            Now</button>
 
                     </div>
                 </form>
@@ -56,17 +44,19 @@
                 to continue</a>
         </div>
     </div>
-
-    <!-- <div class="empty-cart py-16">
+<%} else{%>
+    <div class="empty-cart py-16">
         <div class="container mx-auto text-center">
             <h1 class="text-3xl font-bold mb-2">Cart Empty </h1>
             <p class="text-gray-500 text-lg mb-12">
-                You probably haven't orderred a pizza yet. <br>
+                You probably have not orderred a pizza yet. <br>
                 To order a pizza, go to the main page.
             </p>
             <img src="/img/empty_cart.png" alt="" class="w-2/5 mx-auto">
             <a href="/" class="inline-block px-6 py-2 rounded-full btn-primary text-white font-bold mt-12">Go back</a>
         </div>
-    </div> -->
+    </div> 
+<%}%>
+    
 
 </section>
